syntax = "proto3";

package protodb.index;

message CreateIndexRequest {
    string database = 1;
    string collection = 2;
    int32 field = 3;
}

message CreateIndexResponse {
    enum ErrorCode {
        NO_ERROR = 0;
        INTERNAL_ERROR = 1;
        INVALID_DATABASE = 2;
        INVALID_COLLECTION = 3;
        INVALID_FIELD = 4;
        UNSUPPORTED_FIELD_TYPE = 5;
    }
    ErrorCode error_code = 1;

    uint64 id = 2;
}
