syntax = "proto3";

package protodb.index;

import "protodb/index/index.proto";

message ListIndexesRequest {
    string database = 1;
    string collection = 2;
}

message ListIndexesResponse {
    enum ErrorCode {
        NO_ERROR = 0;
        INTERNAL_ERROR = 1;
        INVALID_DATABASE = 2;
        INVALID_COLLECTION = 3;
    }
    ErrorCode error_code = 1;

    repeated Index indexes = 2;
}
